# recursive-routing-racer-rs

./: Cargo.toml  README.md  VP_VULKANINFO_AMD_Radeon_890M_Graphics_(RADV_STRIX1)_26_0_3.json  demo.rs  voice_chat.sh
src/: main.rs
src/gpu/: engine.rs  mod.rs  ops.rs
src/model/: gguf.rs  mod.rs  phi4.rs  tokenizer.rs
